--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CitizenFX.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\src\code\bin\five\debug\citizen\clr2\lib\mono\4.5\CitizenFX.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -42,8 +46,42 @@
     <Compile Include="Models\Appearance\PropTypes.cs" />
     <Compile Include="Models\Appearance\ComponentTypes.cs" />
     <Compile Include="Models\Appearance\Style.cs" />
-    <Compile Include="Models\User.cs" />
-    <Compile Include="Models\Character.cs" />
+    <Compile Include="Models\Objects\Vehicles\IAerialVehicle.cs" />
+    <Compile Include="Models\Objects\Vehicles\IAirship.cs" />
+    <Compile Include="Models\Objects\Vehicles\IBike.cs" />
+    <Compile Include="Models\Objects\Vehicles\IBikePlane.cs" />
+    <Compile Include="Models\Objects\Vehicles\IBoat.cs" />
+    <Compile Include="Models\Objects\Vehicles\ICar.cs" />
+    <Compile Include="Models\Objects\Items\IItem.cs" />
+    <Compile Include="Models\Objects\Vehicles\IHelicopter.cs" />
+    <Compile Include="Models\Objects\Vehicles\IMotorbike.cs" />
+    <Compile Include="Models\Objects\IObject.cs" />
+    <Compile Include="Models\Objects\Vehicles\IPedalBike.cs" />
+    <Compile Include="Models\Objects\Vehicles\IPlane.cs" />
+    <Compile Include="Models\Objects\Vehicles\IRoadVehicle.cs" />
+    <Compile Include="Models\Objects\Vehicles\ISeaPlane.cs" />
+    <Compile Include="Models\Objects\Vehicles\ISeaVehicle.cs" />
+    <Compile Include="Models\Objects\Vehicles\ISubmersible.cs" />
+    <Compile Include="Models\Objects\Vehicles\ITrailer.cs" />
+    <Compile Include="Models\Objects\Vehicles\IVehicle.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleClass.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleColor.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleDoor.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleDoorIndex.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleLockStatus.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleMod.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleModType.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleSeat.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleWheel.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleWheelType.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleWindow.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleWindowIndex.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleWindowTint.cs" />
+    <Compile Include="Models\Objects\Vehicles\VehicleStockColor.cs" />
+    <Compile Include="Models\Player\IUser.cs" />
+    <Compile Include="Models\Player\ICharacter.cs" />
+    <Compile Include="Models\Objects\Items\IWeapon.cs" />
+    <Compile Include="Models\RadioStation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
