--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -69,8 +69,8 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\Service.cs" />
+    <Compile Include="Services\IClientService.cs" />
+    <Compile Include="Services\ClientService.cs" />
     <Compile Include="Services\ServiceRegistry.cs" />
     <Compile Include="Services\VehicleService.cs" />
   </ItemGroup>
