--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Interface\Hud\Elements\Element.cs" />
     <Compile Include="Interface\Hud\Elements\Speedometer.cs" />
     <Compile Include="Interface\Hud\Elements\Location.cs" />
+    <Compile Include="Interface\Screens\InventoryScreen.cs" />
     <Compile Include="Managers\Manager.cs" />
     <Compile Include="Managers\IManager.cs" />
     <Compile Include="Managers\ManagerRegistry.cs" />
