Setup Vue UI boilerplate

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Events\ServerInformationEventArgs.cs" />
     <Compile Include="Extensions\PlayerExtensions.cs" />
     <Compile Include="Extensions\NumberExtensions.cs" />
+    <Compile Include="Extensions\VectorExtensions.cs" />
     <Compile Include="Extensions\VehicleExtensions.cs" />
     <Compile Include="Handlers\TickHandler.cs" />
     <Compile Include="Input\Input.cs" />
