--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@ packages/
 /*.xml
 /*.dll
 /*.config
+/Interface/node_modules/
+/Interface/dist/
+!/Interface/dist/index.html
 !System.Configuration.Install.dll
 !System.ComponentModel.DataAnnotations.dll
