--- a/Interface/package.json
+++ b/Interface/package.json
@@ -36,6 +36,7 @@
     "vue-loader": "^14.2.2",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.0.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   }
