--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -87,12 +87,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="Extentions\CitizenExtentions.cs" />
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Character.cs" />
+    <Compile Include="Models\Economy\Banking\Bank.cs" />
+    <Compile Include="Models\Economy\Banking\BankAccount.cs" />
+    <Compile Include="Models\Economy\Banking\BankAccountCard.cs" />
+    <Compile Include="Models\Economy\Banking\BankAccountMember.cs" />
+    <Compile Include="Models\Economy\Banking\BankATM.cs" />
+    <Compile Include="Models\Economy\Banking\BankBranch.cs" />
+    <Compile Include="Models\Player\Character.cs" />
+    <Compile Include="Models\Groups\Group.cs" />
+    <Compile Include="Models\Groups\GroupMember.cs" />
+    <Compile Include="Models\Groups\GroupRole.cs" />
     <Compile Include="Services\IServerService.cs" />
     <Compile Include="Models\Objects\Vehicles\VehicleActions.cs" />
     <Compile Include="Services\ServerService.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Player\User.cs" />
     <Compile Include="ServerEventHandlers.cs" />
     <Compile Include="Services\VehicleService.cs" />
     <Compile Include="SessionManager.cs" />
