--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -55,6 +55,7 @@
     </Reference>
     <Reference Include="JetBrains.Annotations, Version=11.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <HintPath>..\packages\JetBrains.Annotations.11.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="NativeUI">
@@ -68,7 +69,6 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientBase.cs" />
     <Compile Include="Events\CharacterEventArgs.cs" />
     <Compile Include="Events\CharactersEventArgs.cs" />
     <Compile Include="Events\UserEventArgs.cs" />
@@ -83,7 +83,7 @@
     <Compile Include="Interface\Hud\Elements\Element.cs" />
     <Compile Include="Interface\Hud\Elements\Speedometer.cs" />
     <Compile Include="Interface\Hud\Elements\Location.cs" />
-    <Compile Include="Interface\NUI.cs" />
+    <Compile Include="Interface\Nui.cs" />
     <Compile Include="Interface\Screens\InventoryScreen.cs" />
     <Compile Include="Managers\Manager.cs" />
     <Compile Include="Managers\IManager.cs" />
@@ -93,6 +93,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
+    <Compile Include="Rpc\Server.cs" />
     <Compile Include="Services\AI\PedFilterService.cs" />
     <Compile Include="Services\IClientService.cs" />
     <Compile Include="Services\ClientService.cs" />
