--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Models\Groups\Group.cs" />
     <Compile Include="Models\Groups\GroupMember.cs" />
     <Compile Include="Models\Groups\GroupRole.cs" />
+    <Compile Include="Rpc\ServerEvents.cs" />
     <Compile Include="Services\IServerService.cs" />
     <Compile Include="Models\Objects\Vehicles\VehicleActions.cs" />
     <Compile Include="Services\ServerService.cs" />
