--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\FloatExtentions.cs" />
+    <Compile Include="Models\Economy\Banking\BankAtm.cs" />
     <Compile Include="Models\Player\ISession.cs" />
     <Compile Include="RpcEvents.cs" />
     <Compile Include="Extensions\Guid.cs" />
