--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Extensions\FloatExtentions.cs" />
     <Compile Include="Models\Economy\Banking\BankAtm.cs" />
+    <Compile Include="Models\Economy\Banking\BankBranch.cs" />
     <Compile Include="Models\Player\ISession.cs" />
     <Compile Include="RpcEvents.cs" />
     <Compile Include="Extensions\Guid.cs" />
