--- a/Interface/package.json
+++ b/Interface/package.json
@@ -9,9 +9,9 @@
     "build": "webpack -p --mode=production --hide-modules"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome": "^1.1.6",
-    "@fortawesome/fontawesome-free-regular": "^5.0.11",
-    "@fortawesome/fontawesome-free-solid": "^5.0.11",
+    "@fortawesome/fontawesome": "^1.1.7",
+    "@fortawesome/fontawesome-free-regular": "^5.0.12",
+    "@fortawesome/fontawesome-free-solid": "^5.0.12",
     "@fortawesome/vue-fontawesome": "0.0.22",
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "bootstrap": "^4.1.1",
@@ -33,11 +33,14 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-webpack-plugin": "^0.10.4",
     "vue": "^2.5.16",
-    "vue-loader": "^15.0.6",
+    "vue-loader": "^15.0.9",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
-    "webpack": "^4.6.0",
+    "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2"
+  },
+  "dependencies": {
+    "npm": "^6.0.0"
   }
 }
