--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -87,6 +87,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\GPSCommand.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Extentions\CitizenExtentions.cs" />
     <Compile Include="Extentions\CharacterExtentions.cs" />
@@ -102,6 +103,7 @@
     <Compile Include="Models\Groups\GroupRole.cs" />
     <Compile Include="Models\Player\Session.cs" />
     <Compile Include="Rpc\ServerEvents.cs" />
+    <Compile Include="Services\CommandService.cs" />
     <Compile Include="Services\Economy\BankService.cs" />
     <Compile Include="Services\IServerService.cs" />
     <Compile Include="Models\Objects\Vehicles\VehicleActions.cs" />
