BranchService working copy, added Math/Vector functions to help with cameras

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\FloatExtentions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Extensions\VectorExtensions.cs" />
+    <Compile Include="Helpers\MathHelpers.cs" />
     <Compile Include="Models\Economy\Banking\BankAtm.cs" />
     <Compile Include="Models\Economy\Banking\BankBranch.cs" />
     <Compile Include="Models\Player\ISession.cs" />
