Added group extentions/controller and began job/salary models

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -47,13 +47,23 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\GroupException.cs" />
+    <Compile Include="Exceptions\ModelException.cs" />
     <Compile Include="Extensions\FloatExtentions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\VectorExtensions.cs" />
     <Compile Include="Helpers\MathHelpers.cs" />
+    <Compile Include="Models\Economy\Banking\BankAccountCard.cs" />
     <Compile Include="Models\Economy\Banking\BankAtm.cs" />
     <Compile Include="Models\Economy\Banking\BankBranch.cs" />
+    <Compile Include="Models\Economy\Salary.cs" />
+    <Compile Include="Models\Groups\Group.cs" />
+    <Compile Include="Models\Groups\GroupMember.cs" />
+    <Compile Include="Models\Groups\GroupRole.cs" />
+    <Compile Include="Models\Model.cs" />
+    <Compile Include="Models\Player\Character.cs" />
     <Compile Include="Models\Player\ISession.cs" />
+    <Compile Include="Models\Position.cs" />
     <Compile Include="Rpc\RpcEvents.cs" />
     <Compile Include="Extensions\Guid.cs" />
     <Compile Include="Extensions\ReflectionExtensions.cs" />
