--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -95,23 +95,23 @@
     <Compile Include="Commands\CarCommand.cs" />
     <Compile Include="Commands\GpsCommand.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Extentions\CitizenExtentions.cs" />
     <Compile Include="Extentions\CharacterExtentions.cs" />
-    <Compile Include="Handlers\BankingActions.cs" />
-    <Compile Include="Handlers\ClientActions.cs" />
-    <Compile Include="Handlers\PlayerActions.cs" />
-    <Compile Include="Handlers\UserActions.cs" />
-    <Compile Include="Handlers\CharacterActions.cs" />
-    <Compile Include="Handlers\OwnershipActions.cs" />
+    <Compile Include="Controllers\BankingActions.cs" />
+    <Compile Include="Controllers\ClientActions.cs" />
+    <Compile Include="Controllers\PlayerActions.cs" />
+    <Compile Include="Controllers\UserActions.cs" />
+    <Compile Include="Controllers\CharacterActions.cs" />
+    <Compile Include="Controllers\OwnershipActions.cs" />
+    <Compile Include="Extentions\Groups\GroupExtentions.cs" />
+    <Compile Include="Extentions\Groups\MemberExtentions.cs" />
+    <Compile Include="Extentions\Groups\RoleExtentions.cs" />
+    <Compile Include="Extentions\ModelExtentions.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Economy\Banking\Bank.cs" />
     <Compile Include="Models\Economy\Banking\BankAccount.cs" />
-    <Compile Include="Models\Economy\Banking\BankAccountCard.cs" />
     <Compile Include="Models\Economy\Banking\BankAccountMember.cs" />
-    <Compile Include="Models\Player\Character.cs" />
-    <Compile Include="Models\Groups\Group.cs" />
-    <Compile Include="Models\Groups\GroupMember.cs" />
-    <Compile Include="Models\Groups\GroupRole.cs" />
     <Compile Include="Models\Player\Session.cs" />
     <Compile Include="Rpc\Client.cs" />
     <Compile Include="Rpc\RpcExtensions.cs" />
@@ -123,7 +123,7 @@
     <Compile Include="Services\CommandService.cs" />
     <Compile Include="Services\Economy\BankService.cs" />
     <Compile Include="Services\IServerService.cs" />
-    <Compile Include="Handlers\VehicleActions.cs" />
+    <Compile Include="Controllers\VehicleActions.cs" />
     <Compile Include="Services\ServerService.cs" />
     <Compile Include="Models\Player\User.cs" />
     <Compile Include="Services\VehicleService.cs" />
