--- a/igicore.cfg
+++ b/igicore.cfg
@@ -1,5 +1,5 @@
 set sv_servername "IgiCore"
 
-set mysql_connection "server=localhost;port=3306;database=fivem;user id=root;password=password;charset=utf8"
+set mysql_connection "server=db;port=3306;database=fivem;user id=root;password=password;charset=utf8"
 
 start igicore
