--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Extensions\PedExtensions.cs" />
     <Compile Include="Extensions\PlayerExtensions.cs" />
     <Compile Include="Extensions\VehicleExtensions.cs" />
-    <Compile Include="Handlers\TickHandler.cs" />
+    <Compile Include="Controllers\TickHandler.cs" />
     <Compile Include="Input\Input.cs" />
     <Compile Include="Input\InputModifier.cs" />
     <Compile Include="Interface\Hud\Elements\Element.cs" />
@@ -87,9 +87,11 @@
     <Compile Include="Managers\Manager.cs" />
     <Compile Include="Managers\IManager.cs" />
     <Compile Include="Managers\ManagerRegistry.cs" />
+    <Compile Include="Managers\World\NpcManager.cs" />
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="Models\World\Npc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
     <Compile Include="Rpc\RpcHandler.cs" />
@@ -114,7 +116,7 @@
     <Compile Include="Services\World\WeatherService.cs" />
     <Compile Include="Interface\Hud\HudManager.cs" />
     <Compile Include="Interface\Map\BlipConfig.cs" />
-    <Compile Include="Managers\MapManager.cs" />
+    <Compile Include="Managers\World\MapManager.cs" />
     <Compile Include="Interface\Map\Loaders\CargoShip.cs" />
     <Compile Include="Interface\Map\Loaders\Yacht.cs" />
     <Compile Include="Interface\Map\Loaders\GrapeseedFarm.cs" />
