Added base for Taxi service and ported vehicle tracking to RPC

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -181,5 +181,8 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\Economy\Business\Driving\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
