--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\VehicleController.cs" />
     <Compile Include="Events\CharacterEventArgs.cs" />
     <Compile Include="Events\CharactersEventArgs.cs" />
     <Compile Include="Events\UserEventArgs.cs" />
@@ -100,8 +101,9 @@
     <Compile Include="Rpc\RpcTrigger.cs" />
     <Compile Include="Rpc\Server.cs" />
     <Compile Include="Services\AI\PedFilterService.cs" />
-    <Compile Include="Services\Economy\BranchService.cs" />
-    <Compile Include="Services\Economy\ATMService.cs" />
+    <Compile Include="Services\Economy\Banking\BranchService.cs" />
+    <Compile Include="Services\Economy\Banking\ATMService.cs" />
+    <Compile Include="Services\Economy\Business\Driving\DowntownCabService.cs" />
     <Compile Include="Services\IClientService.cs" />
     <Compile Include="Services\ClientService.cs" />
     <Compile Include="Services\Player\PlayerIndicatorService.cs" />
