--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\Controller.cs" />
+    <Compile Include="Controllers\ControllerRegistry.cs" />
     <Compile Include="Exceptions\GroupException.cs" />
     <Compile Include="Exceptions\ModelException.cs" />
     <Compile Include="Extensions\FloatExtentions.cs" />
@@ -177,6 +179,7 @@
     <Compile Include="Services\Service.cs" />
     <Compile Include="Services\ServiceRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Registry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
