--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ packages/
 /*.pdb
 /*.xml
 /*.dll
-/*.config
 Interface/node_modules/
 Interface/dist/*
 !Interface/dist/index.html
 !System.Configuration.Install.dll
 !System.ComponentModel.DataAnnotations.dll
 !System.Numerics.dll
+!EntityFramework.resources.dll
